--- a/ESXi/ansible/roles/common/tasks/main.yml
+++ b/ESXi/ansible/roles/common/tasks/main.yml
@@ -1,5 +1,14 @@
 ---
 
+- name: Installing SysInternals Tools
+  win_shell: ".\\install-sysinternals.ps1"
+  args:
+    chdir: 'c:\vagrant\scripts'
+  register: sysinternals
+  failed_when: "'Exception' in sysinternals.stdout"
+
+- debug: msg="{{ sysinternals.stdout_lines }}"
+
 - name: Install Utilities 
   win_chocolatey:
     name:
@@ -8,6 +17,3 @@
     - 7zip
     state: present
     ignore_checksums: yes
-
-
-
