--- a/ESXi/ansible/roles/splunk/tasks/main.yml
+++ b/ESXi/ansible/roles/splunk/tasks/main.yml
@@ -146,7 +146,14 @@
   register: install_splunk
   changed_when: "'The Splunk web interface is at https://splunk:8000' in install_splunk.stdout"
 
-  - name: Install Splunk Add-Ons
+  - name: Configure Splunk
+  args: 
+    executable: /bin/bash
+  become: yes
+  shell: |
+    /opt/splunk/bin/splunk add index wineventlog -auth 'admin:changeme'
+
+  - name: Install Splunk AddOns
   args: 
     executable: /bin/bash
   become: yes
