--- a/ESXi/ansible/roles/splunk/tasks/main.yml
+++ b/ESXi/ansible/roles/splunk/tasks/main.yml
@@ -152,6 +152,8 @@
   become: yes
   shell: |
     /opt/splunk/bin/splunk add index wineventlog -auth 'admin:changeme'
+  register: configure_splunk
+  changed_when: "'added' in configure_splunk.stdout"
 
 - name: Install Splunk Add-Ons
   args: 
@@ -160,6 +162,8 @@
   shell: |
     /opt/splunk/bin/splunk install app /vagrant/resources/splunk_forwarder/splunk-add-on-for-microsoft-windows_800.tgz -auth 'admin:changeme'
     /opt/splunk/bin/splunk install app /vagrant/resources/splunk_forwarder/splunk-add-on-for-microsoft-sysmon_1062.tgz -auth 'admin:changeme'
+  register: install_splunk_addons
+  changed_when: "'You need to restart the Splunk Server (splunkd) for your changes to take effect.' in install_splunk_addons.stdout"
 
 - name: Install Guacamole
   args: 
@@ -168,7 +172,7 @@
   shell: | 
     echo "[$(date +%H:%M:%S)]: Installing Guacamole..."
     cd /opt
-    apt-get -qq install -y gcc g++ libcairo2-dev libjpeg-turbo8-dev libpng-dev libtool-bin libossp-uuid-dev libavcodec-dev libavutil-dev libswscale-dev freerdp2-dev libpango1.0-dev libssh2-1-dev libvncserver-dev libtelnet-dev libssl-dev libvorbis-dev libwebp-dev
+    apt-get -qq install -y gcc g++ libcairo2-dev libjpeg-turbo8-dev libpng-dev libtool-bin libossp-uuid-dev libavcodec-dev libavutil-dev libswscale-dev freerdp2-dev libpango1.0-dev libssh2-1-dev libvncserver-dev libtelnet-dev libssl-dev libvorbis-dev libwebp-dev tomcat9 tomcat9-admin tomcat9-common tomcat9-user
     wget --progress=bar:force "http://apache.org/dyn/closer.cgi?action=download&filename=guacamole/1.2.0/source/guacamole-server-1.2.0.tar.gz" -O guacamole-server-1.2.0.tar.gz
     tar -xf guacamole-server-1.2.0.tar.gz && cd guacamole-server-1.2.0
     ./configure &>/dev/null && make --quiet &>/dev/null && make --quiet install &>/dev/null || echo "[-] An error occurred while installing Guacamole."
