--- a/Vagrant/resources/splunk_forwarder/windows_ta_inputs.conf
+++ b/Vagrant/resources/splunk_forwarder/windows_ta_inputs.conf
@@ -1,9 +1,12 @@
 ###### OS Logs ######
 [WinEventLog://Application]
 disabled = 0
+index = wineventlog
 
 [WinEventLog://Security]
 disabled = 0
+index = wineventlog
 
 [WinEventLog://System]
 disabled = 0
+index = wineventlog
