--- a/ESXi/ansible/roles/cribl/tasks/main.yml
+++ b/ESXi/ansible/roles/cribl/tasks/main.yml
@@ -1,9 +1,11 @@
 - name: Download Cribl
+  become: yes
   get_url:
     url: https://cdn.cribl.io/dl/2.2.2/cribl-2.2.2-daa210f8-linux-x64.tgz
     dest: /opt/cribl-2.2.2-daa210f8-linux-x64.tgz
 
 - name: Extract Cribl
+  become: yes
   unarchive:
     src: /opt/cribl-2.2.2-daa210f8-linux-x64.tgz
     dest: /opt/
